# GenomIQ_Evidence_Visualizer

./: .env.example  .gitignore  DEMO_SCRIPT.md  PROJECT_BRIEF_KO.md  README.md  SUBMISSION_CHECKLIST.md  api_server.py  pyproject.toml
examples/: braf_colorectal_case.txt  synthetic_case.txt  vcf_coordinate_case.txt
knowledge/: genomiq_demo_knowledge.md  ncbi_variant_rag_dataset.md  variant_seed_queries.json
mcp_servers/: genomiq_variant_server.py
media/: genomiq_demo_subtitles.srt
scripts/: build_ncbi_rag_dataset.py
src/genomiq/: __init__.py  agents.py  approval.py  evidence.py  input_extractor.py  mcp_tools.py  orchestrator.py  parser.py  risk.py  schema.py  visualizer.py  work_context.py
tests/: test_pipeline.py
